float with media query

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 							<i class="fas fa-phone-alt"></i> <span>1245639875</span>
 						</div>
 					</div>
+					<div class="set"></div>
 					<div class="skills">
 						<h2><i class="fas fa-certificate"></i> <span>skills</span></h2>
 						<div class="progress">
